k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-forge-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: wordpress.INGRESS_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                namespace: stack-wordpress
                port:
                  number: 80

    - host: ghost.INGRESS_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghost
                namespace: stack-ghost
                port:
                  number: 80

    - host: gitea.INGRESS_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                namespace: stack-gitea
                port:
                  number: 80

    - host: node-api.INGRESS_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-api
                namespace: stack-node-api
                port:
                  number: 80

    - host: flask-api.INGRESS_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-api
                namespace: stack-flask-api
                port:
                  number: 80

    - host: react.INGRESS_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react
                namespace: stack-react
                port:
                  number: 80

    - host: grafana.INGRESS_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                namespace: monitoring
                port:
                  number: 80

    - host: prometheus.INGRESS_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                namespace: monitoring
                port:
                  number: 80
